--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "server.js",
   "scripts": {
     "start": "node server",
-    "server": "PORT=3001 nodemon server"
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"PORT=3000 npm run server\" \"PORT=3001 npm run client\""
   },
   "keywords": [],
   "author": "Dipesh Patil",
